--- a/missfit/missfit/Base.lproj/Main.storyboard
+++ b/missfit/missfit/Base.lproj/Main.storyboard
@@ -465,7 +465,7 @@
             </objects>
             <point key="canvasLocation" x="988" y="-1664"/>
         </scene>
-        <!--Multi Selection View Controller-->
+        <!--Title-->
         <scene sceneID="Tbo-2M-OSc">
             <objects>
                 <viewController storyboardIdentifier="MultiSelectionViewController" id="b3u-Hx-6M6" customClass="MultiSelectionViewController" customModule="missfit" customModuleProvider="target" sceneMemberID="viewController">
@@ -477,7 +477,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4Mw-yb-M29">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4Mw-yb-M29">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -503,8 +503,16 @@
                                                 <constraint firstAttribute="centerY" secondItem="PSd-m3-Kru" secondAttribute="centerY" constant="0.25" id="q9X-iY-aOG"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="checkbox" destination="pwG-wV-Vb1" id="tvZ-8i-xUy"/>
+                                            <outlet property="name" destination="PSd-m3-Kru" id="f4H-MX-bnx"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="b3u-Hx-6M6" id="8DG-Aj-5Ph"/>
+                                    <outlet property="delegate" destination="b3u-Hx-6M6" id="eKd-vl-ZD6"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -523,8 +531,22 @@
                             </mask>
                         </variation>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem title="Item" id="cJg-V0-SaE"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" title="Title" id="yUP-V3-lmf">
+                        <barButtonItem key="leftBarButtonItem" image="backBarBtnBg" id="ks7-Mj-eyA">
+                            <connections>
+                                <action selector="backButtonClicked:" destination="b3u-Hx-6M6" id="iQp-z2-YUl"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="4Mw-yb-M29" id="hbu-94-TqF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ON6-Qh-bbh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
